Removed unnecessary commented code.